fixed for CHLK-5065 Student Panorama - Discipline. Columns Code and primary overlap with sort icon.

--- a/Chalkable.Web/assets/sass2/3_molecules/_chlk-grid.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_chlk-grid.sass
@@ -16,17 +16,23 @@
       position: relative
       font-weight: bold
 
-    .active-sort::before
-      content: " "
-      position: absolute
-      top: 50%
-      margin-top: -3px
-      right: 18px
-      width: 0
-      height: 0
-      border-style: solid
-      border-width: 7px 5px 0 5px
-      border-color: #a19e97 transparent transparent transparent
+    .active-sort
+      padding-right: 15px
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
+
+      &::before
+        content: " "
+        position: absolute
+        top: 50%
+        margin-top: -3px
+        right: 4px
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 7px 5px 0 5px
+        border-color: #a19e97 transparent transparent transparent
 
     .descending::before
       border-width: 0 5px 7px 5px
