--- a/Chalkable.Web/assets/sass2/4_pages/_panorama.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_panorama.sass
@@ -29,6 +29,9 @@
         text-align: left
         padding: 0 10px
 
+        &.active-sort
+          padding-right: 15px
+
       &.code
         width: 5%
 
